--- a/05. Using HttpClientFactory for HttpClient  Instance Management.md
+++ b/05. Using HttpClientFactory for HttpClient  Instance Management.md
@@ -37,3 +37,30 @@ services.AddHttpClient();
 // instantiate 
 _httpClientFactory.CreateClient();
 ```
+
+## Using HttpClientFactory to Manage HttpClient Instances
+
+```csharp
+// register services & client
+services.AddHttpClient("MoviesAPIClient", configureClient =>
+{
+// configure the client
+})
+// instantiate 
+_httpClientFactory.CreateClient("MoviesAPIClient");
+```
+
+Named clients allow working with multiple clients & configuring default settings
+Named clients are registered with a string as key
+
+Typed clients allow working with multiple clients & configuring default settings
+Typed clients are registered with a type as key
+
+**Configuring HttpClients**
+
+Using typed HttpClient instances with type-scoped configuration
+Extending typed HttpClient instances with interaction methods
+
+## Problems with HttpClient
+- When we dispose HttpClient the underlying SocketsHttpHandler is disposed, which closes the underlying connection
+- When we reuse the connection, DNS changes aren’t honored
